feat: genre management overhaul
- Rename package from 'dao' to 'repository' (modern Spring Data standard)
- Add 2-DTO architecture for genres
- Implement pagination and search
- Create GenreSearchList component
- Enhance error handling and validation
- Update services and controllers

Modern REST API with full CRUD operations